Updated the site with info for the 2025 competition.

--- a/pages/rules.mdx
+++ b/pages/rules.mdx
@@ -1,10 +1,10 @@
 # Rules for SBCC
 
-The Single Board Computer Competition (SBCC) has set the following rules to ensure fair and equal competition among participants. First, Apple M1 and M2 chips are off-limits. Additionally, participants must use a minimum of 4 sockets and run MPI. The power limit is set at 250 watts, and the cost limit is $6,000 MSRP (American MSRP).
+The Single Board Computer Competition (SBCC) has set the following rules to ensure fair and equal competition among participants. First, Apple M1-M4 chips are off-limits. Additionally, participants must use a minimum of 4 sockets and run MPI. The power limit is set at 250 watts, and the cost limit is $6,000 MSRP (American MSRP).
 
-The competition will include benchmarking challenges, such as the High-Performance Linpack (HPL) and High-Performance Conjugate Gradient (HPCG), which must be run with MPI. Participants must also complete the Intel MPI benchmarks. There is a application challenge, which will be the Graph500 benchmark. Here are two reference implementations: [Official](https://github.com/graph500/graph500) and [ParallelFirstSearch](https://github.com/du00d/ParallelFirstSearch).
+The competition will include benchmarking challenges, such as the High-Performance Linpack (HPL) and Sustainable Memory Bandwidth in High Performance Computers (STREAM) and Distributed-llama (D-Llama). There is a application challenge, which will be the Hashcat.
 
-The SBCC competition will be held virtually, with the option for in-person participation. The event will take place on May 25th.
+The SBCC competition will be held virtually, with the option for in-person participation. The event will take place on April 10-12th.
 
 To measure efficiency, the GFLOPS/watt for the chips being tested will be recorded based on HPL results. A sample result of what is expected can be found here: https://github.com/deater/performance_results. We just want a table with the chips and their gflops/watt.
 
