Updated introduction, adresses and FAQ

--- a/pages/sbcc-2023.mdx
+++ b/pages/sbcc-2023.mdx
@@ -17,7 +17,7 @@ The event was held both virtually and in-person, with participants having the op
 
 Participants were required to work within certain constraints, including a power limit of 250 watts and a cost limit of $6,000 MSRP. Teams were also required to consist of undergraduate and graduate students only.
 
-Overall, this event promised to be an exciting opportunity for anyone interested in high-performance computing to showcase their skills, learn from others, and explore the latest technologies in this rapidly evolving field. We looked forward to seeing you there!
+Overall, this event promised to be an exciting opportunity for anyone interested in high-performance computing to showcase their skills, learn from others, and explore the latest technologies in this rapidly evolving field.
 
 
 ## Rules for 2023
