--- a/pages/introduction.mdx
+++ b/pages/introduction.mdx
@@ -2,13 +2,13 @@ import { SignUpButton } from '../components/signUpButton'
 
 # Introduction
 
-On the 25th of May, the University of California San Diego (UCSD) will be hosting an exciting event focused on high-performance computing. This event is open to all students, researchers, and enthusiasts who are interested in exploring the capabilities of supercomputers and single board computers.
+On the 10-12th of April, the University of California San Diego and University of Texas Austin will be hosting an exciting event focused on high-performance computing. This event is open to all students, researchers, and enthusiasts who are interested in exploring the capabilities of supercomputers and single board computers.
 
-Participants will have the opportunity to showcase their skills in building and optimizing single board computer clusters using the latest hardware and software technologies. The event will feature several benchmarking challenges, including HPL and HPCG, which will be run with MPI.
+Participants will have the opportunity to showcase their skills in building and optimizing single board computer clusters using the latest hardware and software technologies. 
 
-The Graph500 applications will also be featured, providing participants with an opportunity to explore the application of high-performance computing in real-world scenarios.
+The event will feature several benchmarking challenges as well as cluster applications that will have to be run.
 
-The event will be held both virtually and in-person, with participants having the option to attend in person at UCSD or remotely via online platforms. This will ensure that the event is accessible to as many participants as possible, regardless of their location.
+The event will be held both virtually and in-person, with participants having the option to attend in person at one of the locations on the home page or remotely via online platforms. This will ensure that the event is accessible to as many participants as possible, regardless of their location.
 
 Participants will be required to work within certain constraints, including a power limit of 250 watts and a cost limit of $6,000 MSRP. Teams will also be required to consist of undergraduate and graduate students only.
 
